--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Telcell Landing Page" />
+    <meta name="description" content="Telcel Landing Page" />
     <meta name="author" content="SantiagoG" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Telcell Landing</title>
+    <title>Telcel Landing</title>
   </head>
   <body>
     <nav>
