--- a/index.html
+++ b/index.html
@@ -248,13 +248,28 @@
         <div class="footer_col">
           <div class="social">
             <div class="social_icon">
-              <a href="#"><img src="./img/IG.svg" alt="Instagram" /></a>
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="./img/IG.svg" alt="Instagram"
+              /></a>
             </div>
             <div class="social_icon">
-              <a href="#"><img src="./img/FB.svg" alt="Facebook" /></a>
+              <a
+                href="https://facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="./img/FB.svg" alt="Facebook"
+              /></a>
             </div>
             <div class="social_icon">
-              <a href="#"><img src="./img/YT.svg" alt="Youtube" /></a>
+              <a
+                href="https://youtube.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="./img/YT.svg" alt="Youtube"
+              /></a>
             </div>
           </div>
         </div>
